isbm_server/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isbn-sp-ingress
  namespace: isbn-sp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: isbn.bookserver.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: isbn-service
            port:
              number: 8080

    # https:
    #   paths:
    #   - backend:
    #       serviceName: isbn-service
    #       servicePort: 8080
